--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <section id="contact">
             <h2>ติดต่อเรา</h2>
             <p>คลินิกตั้งอยู่หน้าหมู่บ้านไอดีไซน์ ใกล้สำนักงานเขตคลองสามวาและแยกซาฟารีเวิลด์ <button class="citation-flag" data-index="9"></p>
-            <p>โทร: 02-XXXX-XXXX</p>
+            <p>โทร: 021151528 หรือ 0917954884</p>
             <p>เปิดบริการทุกวัน เวลา 10:00 - 20:00 น.</p>
         </section>
     </div>
