--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="กัญวราคลินิก - คลินิกรักษาสิว อันดับ 1 ย่านซาฟารีเวิลด์ ให้บริการรักษาสิว หลุมสิว รูขุมขน และยกกระชับผิวหน้าอย่างครบวงจร">
     <meta name="keywords" content="กัญวราคลินิก, รักษาสิว, หลุมสิว, รูขุมขน, ยกกระชับผิวหน้า">
     <meta name="author" content="Kanwara Clinic">
-    <title>กัญวราคลินิก - คลินิกรักษาสิว อันดับ 1</title>
+    <title>กัญวราคลินิก คลินิกรักษาสิว อันดับ 1</title>
     <style>
         body {
             font-family: 'Prompt', sans-serif;
