--- a/คลินิกรักษาสิว.html
+++ b/คลินิกรักษาสิว.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <title>10 อันดับ คลินิกรักษาสิวที่ดีที่สุด ปี 2025 | Top Thai Clinic</title>
+  <title>10 อันดับ คลินิกรักษาสิวที่ดีที่สุด ปี 2025 | กัญวราคลินิก </title>
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/logo.png">
+  <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Font Awesome -->
