--- a/คลินิกรักษาสิว.html
+++ b/คลินิกรักษาสิว.html
@@ -542,13 +542,10 @@
     </div>
   </section>
   
-  <section class="about">
+  <section class="hero">
     <div class="container">
-      <div class="about-content">
-        <div class="about-image">
-          <img class="clinic-image" src="images/10-อันดับคลินิกรักษาสิว/รักษาสิว1.jpg" alt="รักษาสิว">
-        </div>
-        <div class="about-text">
+      <div class="hero-main-text">
+
 
   <h2>การรักษาสิว</h2>
 <p>สิวเป็นความผิดปกติของผิวหนัง ที่สามารถพบได้บ่อย โดยเฉพาะในวัยหนุ่มสาว บางรายมีอาการเพียงเล็กน้อย และอาจไม่จำเป็นต้องรักษา แต่ส่วนมากมักจะเป็นมากพอควรและเป็นอยู่นาน ซึ่งนำไปสู่การเกิดรอยแผลเป็น ทำให้เสียโฉมไปตลอดชีวิต เรื่องจากสิงมักจะเป็นมากในวัยรุ่น ดังนั้นจึงอาจส่งผลถึงการพัฒนาบุคลิกภาพ ทำให้วัยรุ่นบุคลิกภาพเสีย อาจกลายเป็นคนขาดความมั่นใจในตนเอง ไม่กล้าเข้าสังคม และไม่กล้าแสดงออกซึ่งความสามารถของตนได้</p>
